fix:gap betweeen home section 1

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -122,7 +122,7 @@ body {
 }
 /* Wave */
 #section1 > #wave > img {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -130,6 +130,7 @@ body {
 }
 
 #avatar {
+  margin-top: -10px;
   position: relative;
   display: flex;
 
@@ -137,9 +138,7 @@ body {
 
   width: 100%;
 
-  top: 90vh;
-
-  background-color: #dae2b6;
+  background-color: #32361c;
 }
 
 #avatar > #myimg {
@@ -157,7 +156,9 @@ body {
   transform: rotate(0deg);
 }
 #greeting-box {
+  position: absolute;
   background-color: #bbde6f;
+  
   height: 390px;
   width: 560px;
   border-radius: 80px;
@@ -168,6 +169,7 @@ body {
 }
 #greeting-box > span {
   position: relative;
+  left: 10%;
 
   top: 50px;
   margin: 30px;
@@ -175,19 +177,15 @@ body {
   font-size: 29px;
 }
 
-#section2 >img {
- 
+#section2 > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   z-index: -1;
-
 }
-#section1{
+#section1 {
   position: relative;
- 
 }
-#home{
+#home {
   position: relative;
-  
 }
